service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-nodeport
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30080
